[gd_scene load_steps=3 format=2]

[ext_resource path="res://stages/base/Stage.gd" type="Script" id=1]
[ext_resource path="res://characters/base/Character.tscn" type="PackedScene" id=2]

[node name="Stage" type="Node" index="0"]

script = ExtResource( 1 )
bpm = 120

[node name="GameTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 90.0
one_shot = true
autostart = false

[node name="StartTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="Background" type="ColorRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1680.0
margin_bottom = 945.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.375977, 0.479958, 0.601563, 1 )
_sections_unfolded = [ "Rect" ]

[node name="Ground" type="ColorRect" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.285156, 0.285156, 0.285156, 1 )
_sections_unfolded = [ "Rect" ]

[node name="StaticBody2D" type="StaticBody2D" parent="Background/Ground" index="0"]

visible = false
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Background/Ground/StaticBody2D" index="0"]

build_mode = 0
polygon = PoolVector2Array( 0, 0, 3600, 0, 3600, 360, 0, 350 )

[node name="Position0" type="Position2D" parent="." index="3"]

position = Vector2( 200, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Position1" type="Position2D" parent="." index="4"]

position = Vector2( 600, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Position2" type="Position2D" parent="." index="5"]

position = Vector2( 1000, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Position3" type="Position2D" parent="." index="6"]

position = Vector2( 1400, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Position4" type="Position2D" parent="." index="7"]

position = Vector2( 1800, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Position5" type="Position2D" parent="." index="8"]

position = Vector2( 2200, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Position6" type="Position2D" parent="." index="9"]

position = Vector2( 2600, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Position7" type="Position2D" parent="." index="10"]

position = Vector2( 3000, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Position8" type="Position2D" parent="." index="11"]

position = Vector2( 3400, 1510 )
_sections_unfolded = [ "Transform" ]

[node name="Player1" parent="." index="12" instance=ExtResource( 2 )]

position = Vector2( 200, 1510 )
scale = Vector2( 10, 10 )
_sections_unfolded = [ "Transform" ]

[node name="Player2" parent="." index="13" instance=ExtResource( 2 )]

modulate = Color( 0.0583649, 0.628898, 0.878906, 1 )
position = Vector2( 3400, 1510 )
scale = Vector2( 10, 10 )
_sections_unfolded = [ "Transform", "Visibility" ]
player = 1

[node name="Camera2D" type="Camera2D" parent="." index="14"]

position = Vector2( 0, 930 )
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = 0
limit_right = 3600
limit_bottom = 2025
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = false
_sections_unfolded = [ "Editor", "Limit", "Offset", "Smoothing", "Transform" ]

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]


